refactor: minor changes